# urc_intelsys_2024

./: .gitignore  README.md  launch.sh  package.xml  setup.cfg  setup.py
.github/workflows/: black.yml
diagrams/: Diagram.mdj
src/Visualizer/: package.xml  setup.cfg  setup.py
src/Visualizer/Visualizer/: PyGame.py
src/compass/: package.xml  setup.py
src/compass/compass/: actual_compass.py  compass.py  compass_listener.py  compass_type.py  fake_compass.py  main.py  quaternion_publisher.py
src/constants/: package.xml  setup.py
src/constants/constants/: __init__.py
src/control/: package.xml  setup.py
src/control/control/: Task.py  TaskManager.py
src/dummy_map/: package.xml  setup.cfg  setup.py
src/dummy_map/dummy_map/: maze.py
src/gps/: package.xml  setup.py
src/gps/gps/: GPS.py  ZEDF9P.py  ZED_F9P.py  actual_gps.py  fake_gps.py  geo_to_cart.py  geo_to_cart_srv.py  gps.py  gps_distance_srv.py  gps_listener.py  gps_type.py  main.py
src/map/: package.xml  setup.py
src/map/map/: map.py  worldframe.py
src/navigation/: package.xml  setup.py
src/obstacle_detection/: package.xml  setup.py
src/obstacle_detection/models/yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
src/obstacle_detection/obstacle_detection/: __init__.py  camera_localizer.py  camera_localizer_node.py  obstacle_mapper.py
src/obstacle_detection_node/: package.xml  setup.cfg  setup.py
src/pathfinder/: package.xml  setup.py
src/pathfinder/pathfinder/: map_listner.py  pathfinder_listener.py  pathfinder_publisher.py
src/urc_intelsys_2024/: package.xml  setup.py
src/urc_intelsys_2024/config/: config.yaml
src/urc_intelsys_2024/launch/: sensor_launch.py
src/urc_intelsys_2024_msgs/: CMakeLists.txt  README.md  package.xml
src/urc_intelsys_2024_msgs/msg/: COMPASS_QUA.msg  Drive.msg  GPSNavDetails.msg  HexMap1.msg  Map1.msg  PolarCoordinate.msg  (+6 more)
src/worldmodel/: package.xml  setup.cfg  setup.py
(+35 files in other folders)
