<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urc_intelsys_2024</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chrehall68@gmail.com">eliot</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-adafruit-blinka-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
