<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>ROS2 node wrapper for obstacle detection</description>
  <maintainer email="Gill.Teghbir@gmail.com">SJSU Robotics Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>urc_intelsys_2024_msgs</depend>
  <depend>constants</depend>
  <!-- <depend>openvino</depend> -->
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>